@startuml NextStep DER

entity "users" as users {
  * id : number <<PK>>
  --
  * role_id : number <<FK>>
  * email : VARCHAR(255) <<UNIQUE>>
  * password_hash : VARCHAR(255)
  * first_name : VARCHAR(100)
  * last_name : VARCHAR(100)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "roles" as roles {
  * id : number <<PK>>
  --
  * name : VARCHAR(50) <<UNIQUE>>
}

entity "seniorities" as seniorities {
  * id : number <<PK>>
  --
  * name : VARCHAR(50) <<UNIQUE>>
}

entity "job_offers" as job_offers {
  * id : number <<PK>>
  --
  * recruiter_id : number <<FK>>
  * seniority_id : number <<FK>>
  * title : VARCHAR(255)
  * description : TEXT
  * is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "stages" as stages {
  * id : number <<PK>>
  --
  * name : VARCHAR(100) <<UNIQUE>>
  * sequence_order : INT <<UNIQUE>>
  * is_terminal : BOOLEAN
}

entity "applications" as applications {
  * id : number <<PK>>
  --
  * applicant_id : number <<FK>>
  * job_offer_id : number <<FK>>
  * current_stage_id : number <<FK>>
  applied_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "feedbacks" as feedbacks {
  * id : number <<PK>>
  --
  * application_id : number <<FK>>
  * stage_id : number <<FK>>
  * recruiter_id : number <<FK>>
  technical_score : INT
  soft_skills_score : INT
  * comment : TEXT
  internal_notes : TEXT
  public_feedback : TEXT
  created_at : TIMESTAMP
}

entity "audit_logs" as audit_logs {
  * id : number <<PK>>
  --
  user_id : number <<FK>>
  * action : VARCHAR(100)
  * entity : VARCHAR(100)
  entity_id : INT
  created_at : TIMESTAMP
}

entity "scorecards" as scorecards {
  * id : number <<PK>>
  --
  * feedback_id : number <<FK>>
  * skill_name : VARCHAR(255)
  * score : INT
  * type : ENUM(technical, soft)
  created_at : TIMESTAMP
}

entity "cv_files" as cv_files {
  * id : UUID <<PK>>
  --
  * user_id : number <<FK>>
  * original_name : VARCHAR(255)
  * stored_name : VARCHAR(255)
  * extension : VARCHAR(10)
  * directory : VARCHAR(255)
  created_at : TIMESTAMP
}

' Relación de Usuarios y Roles (1 a Muchos)
roles ||--o{ users : "define el perfil de"

' Relaciones de Ofertas y Skills/Seniority
users ||--o{ job_offers : "crea (recruiter)"
seniorities ||--o{ job_offers : "categoriza"

' Relaciones de Postulaciones y Etapas
users ||--o{ applications : "se postula (applicant)"
job_offers ||--o{ applications : "recibe"
stages ||--o{ applications : "marca el estado actual de"

' Relaciones de Feedback
applications ||--o{ feedbacks : "tiene"
stages ||--o{ feedbacks : "identifica el momento del"
users ||--o{ feedbacks : "escribe (recruiter)"

' Relaciones de Auditoría
users ||--o{ audit_logs : "genera"

' Scorecards
feedback ||--o{ scorecards : "contiene"

' CVs
users ||--o{ cv_files : "sube"

@enduml